# aoe

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Findasio.cmake
src/: CMakeLists.txt
src/aoe_type_traits/: CMakeLists.txt
src/aoe_type_traits/include/aoe/: typelist.h  vartype_dict.h
src/aoe_type_traits/test/aoe_type_traits/: main.cpp
src/base/: CMakeLists.txt
src/base/include/aoe/base/: base.h  init_config.h  sys_base.h  version.h
src/base/src/base/: base.cpp
src/base/test/: main.cpp
src/binding/: CMakeLists.txt
src/binding/include/aoe/binding/: helper_macro.h  object.h  object_type.h  object_view.h  type_info.h  value_type.h
src/binding/include/aoe/binding/details/: enum_base.h  helper_macro.h  object_mem.h  type_base.h  type_info.h  value_base.h
src/binding/src/binding/: object.cpp
src/binding/test/: main.cpp
src/design_pattern /: CMakeLists.txt
src/discover/: CMakeLists.txt
src/discover/include/aoe/discover/: discover.h
src/discover/include/aoe/discover/channel/: channel_base.h  channel_interface.h  channel_net_tools.h  multicast_channel.h
src/discover/include/aoe/discover/msg/: discover_msg.h  discover_msg_pool.h  discover_msg_pool.inl
src/discover/src/: node.cpp
src/discover/src/discover/channel/: channel_base.cpp  channel_net_tools.cpp  multicast_channel.cpp
src/discover/src/discover/msg/: discover_msg.cpp
src/discover/test/: aoe_discover_client.cpp  aoe_discover_server.cpp
src/io/: CMakeLists.txt
src/io/include/aoe/io/net/: net_base.h  receive_base.h  udp_receive.h  udp_receive_asio.h  udp_receive_base.h  udp_sender.h
src/io/src/io/net/: udp_receive.cpp  udp_receive_asio.cpp  udp_sender.cpp
src/io/test/: udp_client.cpp  udp_server.cpp
src/macro/: CMakeLists.txt  README.md
src/macro/include/aoe/: macro.h
src/macro/include/aoe/macro/: arguments.h  concat.h  count.h  expand.h  fancier.h  invoke.h  unique.h  unused.h
src/macro/test/: TEST_args.cpp  TEST_concat.cpp  TEST_count.cpp  TEST_invoke.cpp  main.cpp
src/serialize/: CMakeLists.txt
src/serialize/include/aoe/serialize/: byte_orderer.h  enable_if.h  enumerable.h  float_details.h  map_pair.h  serialize.h  serialize_base.h  vectorstream.h
src/serialize/src/: serialize.cpp
src/serialize/test/: main.cpp
src/string_hash/: CMakeLists.txt
src/string_hash/include/aoe/: string_hash.h
src/string_hash/include/aoe/string_hash/: ap.h  bkdr.h  bp.h  dek.h  djb.h  elf.h  fnv.h  js.h  pjw.h  rs.h  sdbm.h
src/string_hash/test/: string_hash_base_test.cpp
src/thread/: CMakeLists.txt
src/thread/test/: TEST_acquire_release.cpp  TEST_fence.cpp  TEST_memory_order_consume.cpp  TEST_memory_order_seq_cst.cpp  TEST_memory_relaxed.cpp  TEST_signal_fence.cpp  deadLock.cpp  singletonCallOnce.cpp  thread_init.cpp
src/utils/: CMakeLists.txt
src/utils/include/aoe/design_pattern/: singleton.h
src/utils/include/aoe/self_start/: manager.h  module.h  policy.h  self_start.h
src/utils/include/aoe/self_start/details/: module_base.h
src/utils/include/aoe/this_process/: this_process.h
src/utils/src/base_utils/: manager.cpp  this_process.cpp
src/utils/test/base_utils/: main.cpp
src/utils/test/module_manager/: main.cpp
